<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title=" ">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_160"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/iv_head_bg_my_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/bg_choose_class" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/black_88000000" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/bg_my_fragment" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_head_my_fragment"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:layout_centerInParent="true"
                    android:src="@drawable/bg_choose_class"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="@dimen/dp_5" />

                <TextView
                    android:id="@+id/tv_nickname_my_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_head_my_fragment"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_14"
                    android:text="我是认真的"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/sp_15" />
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:title=" "
                android:visibility="gone"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                app:title=" ">

                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:text="会员中心"-->
                <!--android:textColor="@color/black_333333"-->
                <!--android:textSize="@dimen/sp_16" />-->
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.lingkj.android.library.view.LSettingItem
                android:id="@+id/btn_member_center_my_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:LtextColor="@color/black_333333"
                app:LtextSize="14"
                app:isShowRightText="true"
                app:isShowUnderLine="false"
                app:leftText="@string/text_member_privilege"
                app:rightText="@string/text_to_be_member"
                app:rightTextColor="@color/yellow_f3802c"
                app:rightTextSize="14" />

            <include layout="@layout/layout_line_e3e3e3_1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableTop="@mipmap/icon_refund_my_fragment"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_15"
                    android:paddingTop="@dimen/dp_15"
                    android:text="无忧退款"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/sp_14" />

                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="match_parent"
                    android:background="@color/line_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableTop="@mipmap/icon_course_my_fragment"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_15"
                    android:paddingTop="@dimen/dp_15"
                    android:text="课程优惠"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/sp_14" />

                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="match_parent"
                    android:background="@color/line_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableTop="@mipmap/icon_counselor_my_fragment"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_15"
                    android:paddingTop="@dimen/dp_15"
                    android:text="选课顾问"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/sp_14" />

                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="match_parent"
                    android:background="@color/line_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableTop="@mipmap/icon_walk_my_fragment"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_15"
                    android:paddingTop="@dimen/dp_15"
                    android:text="出行保障"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <include layout="@layout/layout_line_e3e3e3_1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableTop="@mipmap/icon_classroom_my_fragment"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_15"
                    android:paddingTop="@dimen/dp_15"
                    android:text="上课保障"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/sp_14" />

                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="match_parent"
                    android:background="@color/line_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableTop="@mipmap/icon_installment_my_fragment"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_15"
                    android:paddingTop="@dimen/dp_15"
                    android:text="分期付款"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/sp_14" />

                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="match_parent"
                    android:background="@color/line_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableTop="@mipmap/icon_integral_change_my_fragment"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_15"
                    android:paddingTop="@dimen/dp_15"
                    android:text="积分兑换"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/sp_14" />

                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="match_parent"
                    android:background="@color/line_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableTop="@mipmap/icon_security_my_fragment"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_15"
                    android:paddingTop="@dimen/dp_15"
                    android:text="其他权益"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <include layout="@layout/layout_line_e3e3e3_1dp" />

            <com.lingkj.android.library.view.LSettingItem
                android:id="@+id/btn_shopping_cart_my_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:clickable="true"
                app:LtextColor="@color/black_333333"
                app:LtextSize="14"
                app:isShowUnderLine="true"
                app:leftIcon="@mipmap/icon_shopping_cart_my_fragment"
                app:leftText="@string/text_shopping_cart"
                app:leftTextMarginLeft="@dimen/dp_6" />

            <com.lingkj.android.library.view.LSettingItem
                android:id="@+id/btn_order_my_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:LtextColor="@color/black_333333"
                app:LtextSize="14"
                app:isShowUnderLine="true"
                app:leftIcon="@mipmap/icon_order_my_fragment"
                app:leftText="@string/text_my_order"
                app:leftTextMarginLeft="@dimen/dp_6" />

            <com.lingkj.android.library.view.LSettingItem
                android:id="@+id/btn_wallet_my_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:LtextColor="@color/black_333333"
                app:LtextSize="14"
                app:isShowUnderLine="true"
                app:leftIcon="@mipmap/icon_wallet_my_fragment"
                app:leftText="@string/text_wallet"
                app:leftTextMarginLeft="@dimen/dp_6" />

            <com.lingkj.android.library.view.LSettingItem
                android:id="@+id/btn_coupon_my_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:LtextColor="@color/black_333333"
                app:LtextSize="14"
                app:isShowUnderLine="false"
                app:leftIcon="@mipmap/icon_coupon_my_fragment"
                app:leftText="@string/text_coupon"
                app:leftTextMarginLeft="@dimen/dp_6" />

            <com.lingkj.android.library.view.LSettingItem
                android:id="@+id/btn_collection_my_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:clickable="true"
                app:LtextColor="@color/black_333333"
                app:LtextSize="14"
                app:isShowUnderLine="true"
                app:leftIcon="@mipmap/icon_collection_my_fragment"
                app:leftText="@string/text_my_collection"
                app:leftTextMarginLeft="@dimen/dp_6" />

            <com.lingkj.android.library.view.LSettingItem
                android:id="@+id/btn_integral_my_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:LtextColor="@color/black_333333"
                app:LtextSize="14"
                app:isShowUnderLine="true"
                app:leftIcon="@mipmap/icon_integral_my_fragment"
                app:leftText="@string/text_my_integral"
                app:leftTextMarginLeft="@dimen/dp_6" />

            <com.lingkj.android.library.view.LSettingItem
                android:id="@+id/btn_evaluation_my_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:LtextColor="@color/black_333333"
                app:LtextSize="14"
                app:isShowUnderLine="false"
                app:leftIcon="@mipmap/icon_evaluation_my_fragment"
                app:leftText="@string/text_my_evaluation"
                app:leftTextMarginLeft="@dimen/dp_6" />

            <com.lingkj.android.library.view.LSettingItem
                android:id="@+id/btn_setting_my_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:clickable="true"
                app:LtextColor="@color/black_333333"
                app:LtextSize="14"
                app:isShowUnderLine="true"
                app:leftIcon="@mipmap/icon_setting_my_fragment"
                app:leftText="@string/text_my_setting"
                app:leftTextMarginLeft="@dimen/dp_6" />

            <com.lingkj.android.library.view.LSettingItem
                android:id="@+id/btn_help_feedback_my_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:LtextColor="@color/black_333333"
                app:LtextSize="14"
                app:isShowUnderLine="false"
                app:leftIcon="@mipmap/icon_help_feedback_my_fragment"
                app:leftText="@string/text_help_feedback"
                app:leftTextMarginLeft="@dimen/dp_6" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>